Fixed dark mode

--- a/assets/css/_gutemberg.scss
+++ b/assets/css/_gutemberg.scss
@@ -71,7 +71,7 @@
     }
 
     .wp-block-info {
-        @apply py-6 px-8 rounded-2xl border shadow-lg my-12 bg-white;
+        @apply py-6 px-8 rounded-2xl border shadow-lg my-12 bg-white text-neutral;
     }
 
     .wp-block-pullquote {
